2017-07-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open df_readascii expect_string) src/datafile.h
	src/plot2d.c src/tabulate.c src/tabulate.h docs/gnuplot.doc:
	Move code for "plot with table" into tabulate.c (tabulate_one_line).
	Plot styles (e.g. "with labels") already call expect_string(column) to
	signal that a particular input column is to be treated as a string.
	Now we add special case so that "with table" can use expect_string(-1)
	to signal that any column is treated as a string if its using specifier
	evaluates to a string.  This allows "plot ... with table" to create
	tables containing strings and to use sprintf/gprintf to format
	numerical output.

	* src/set.c (set_separator) src/show.c (show_table):  New command option
	    set table {separator {comma|tab|whitespace|"<char>"}}
	allows "plot with table" to create csv files.

	* src/plot2d.c src/tabulate.c src/tabulate.h:  EXPERIMENTAL feature
	(version in 5.3 is subject to change and may never appear in a released
	version in this form).
	    plot ... with table if <expression>
	where <expression> can access input data fields by column number, etc,
	as if it were a using specification. Implemented only for "with table"
	but the mechanism could just as easily work for other plot styles.
	Example:
	    plot <file> using 1:2:($4+$5) with table if (strcol(3) eq "Red")

2017-07-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c src/plot3d.c:  Fix inconsistent handling of 
	"plot ... with table". E.g. "set style data table; plot foo" tried to
	both plot and tabulate.  Warn that function plots are not handled.

2017-07-16  Ethan A Merritt  <merritt@u.washington.edu>

 	* config/config.cyg config/config.mgw config/config.nt config/config.os2
	config/config.oww configure.ac src/internal.c term/post.trm:
	snprintf() is now required.  Remove vestigial tests for HAVE_SNPRINTF.

2017-07-14  Ethan A Merritt  <merritt@u.washington.edu>
