@@ -1,3 +1,11 @@
+2017-07-22  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/fit.c:  The code saving the previous "fit" command incorrectly
+	assumed that "fit" must be the first thing on the input line.  This
+	is clearly not true, particularly when the command is inside a {}
+	bracketed clause since the entire clause acts as one long input line.
+	Bug #1946
+
 2017-07-20  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c (df_open df_readascii expect_string) src/datafile.h
